--- a/SBSender/appsettings.json
+++ b/SBSender/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AzureServiceBus": "Endpoint=sb://timcoservicebus1.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=1U7AnYBAN50HF0SHyYO+2lojJ4xMCa3/FGyv7hDyY0E="
+    "AzureServiceBus": "Endpoint=sb://timcoservicebus1.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=<YourKey>"
   }
 
 }
